# rust-task-manager-cli

./: Cargo.toml  README.md  tasks.json
src/: lib.rs  main.rs
src/adapter/: cli.rs
src/domain/: task.rs
src/infrastructure/: storage.rs
src/usecase/: mod.rs  task_manager.rs
tests/: task_manager_tests.rs
