[package]
name = "task-manager-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "task_manager_cli"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0.0"